--- a/templates/default/generic-nginx.erb
+++ b/templates/default/generic-nginx.erb
@@ -1,6 +1,8 @@
 server {
   listen  80;
   server_name  <%= @server_name %>;
+  error_log <%= @error_log %>;
+  access_log <%= @access_log %>;
 
   location / {
     root  <%= @document_root %>;
