--- a/templates/default/generic-nginx.erb
+++ b/templates/default/generic-nginx.erb
@@ -1,6 +1,6 @@
 server {
   listen  80;
-  server_name  <%= @server_name %>;
+  server_name  <%= @server_name %> <%= @site_names.join(' ') %>;
   error_log <%= @error_log %>;
   access_log <%= @access_log %>;
 
